--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@ a {
 }
 
 body {
-  background-image: url('public/spaceGif.gif');
+  background-image: url('public/space.jpg');
   background-size: cover;
   color: white;
 
